--- a/style.css
+++ b/style.css
@@ -1,11 +1,22 @@
-.vid-box {
+.map {
   width: 100%;
-  max-width: 400px;
-  height: 200px;
+  max-width: 480px;
+  height: auto;
+}
+.vid-box {
+  position: relative;
+  display: block;
+  width: 100%;
+  max-width: 480px;
+  height: 240px;
+  background-color: #efefef;
 }
 .status {
-  width: 20px;
-  height: 20px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 10px;
+  height: 10px;
   border-radius: 50%;
   display: inline-block;
   background-color: red;
