--- a/style.css
+++ b/style.css
@@ -1,15 +1,23 @@
-.map {
+body {
+  margin: 0;
+  background: white;
+  font: 16px "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.map, .vid-box, .chat-out, .chat-in {
   width: 100%;
   max-width: 480px;
+}
+.map {
   height: auto;
 }
 .vid-box {
   position: relative;
-  display: block;
-  width: 100%;
-  max-width: 480px;
   height: 240px;
-  background-color: #efefef;
+  background-color: #000;
+}
+.vid-box video {
+  width: 100%;
+  height: 100%;
 }
 .status {
   position: absolute;
@@ -20,4 +28,78 @@
   border-radius: 50%;
   display: inline-block;
   background-color: red;
+}
+
+.chat-out, .chat-in-container {
+  max-width: 478px;
+  display: block;
+  border: 1px solid #ddd;
+}
+.chat-out {
+  padding: 10px 0;
+  height: 260px;
+}
+.chat-in-container {
+  position: relative;
+  margin-top: 2px;
+  margin-bottom: 50px;
+  height: 36px;
+}
+.chat-in-container input {
+  font-size: 16px;
+  width: 95%;
+  height: 30px;
+  padding: 0 5px;
+  outline: none;
+  border: 0;
+}
+.chat-in-container img {
+  width: 28px;
+  height: 28px;
+  position: absolute;
+  top: 4px;
+  right: 10px;
+}
+
+/* Chat Bubbles */
+.chat-out p {
+  margin: 0 0 0.5em;
+  border-radius: 1em;
+  padding: 0.5em 1em;
+  background: #e5e5ea;
+  max-width: 75%;
+  clear: both;
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+.chat-out p.them {
+  float: left;
+  margin-left: 5px;
+}
+.chat-out p.them::after {
+  content: "";
+  position: absolute;
+  left: -0.5em;
+  bottom: 0;
+  width: 0.5em;
+  height: 1em;
+  border-right: 0.5em solid #e5e5ea;
+  border-bottom-right-radius: 1em 0.5em;
+}
+.chat-out p.me {
+  float: right;
+  margin-right: 5px;
+  background-color: #1289fe;
+  color: white;
+}
+.chat-out p.me::after {
+  content: "";
+  position: absolute;
+  right: -0.5em;
+  bottom: 0;
+  width: 0.5em;
+  height: 1em;
+  border-left: 0.5em solid #1289fe;
+  border-bottom-left-radius: 1em 0.5em;
 }
